// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags should match Tags styles 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  margin: 0 0.4rem 0.4rem 0;
}

.emotion-1 {
  position: relative;
  margin: 0 0 0.4rem;
}

.emotion-1::before {
  position: absolute;
  right: 101%;
}

<div>
  <ul
    class="Nautilus-List emotion-4"
  >
    <li
      class="Nautilus-ListItem emotion-1"
    >
      <span
        class="emotion-0"
        data-testid="child-one"
      >
        Hello
      </span>
    </li>
    <li
      class="Nautilus-ListItem emotion-1"
    >
      <span
        class="emotion-0"
        data-testid="child-two"
      >
        Goodbye
      </span>
    </li>
  </ul>
</div>
`;

exports[`Tags should match styles 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  margin: 0 0.4rem 0.4rem 0;
}

<div>
  <span
    class="emotion-0"
  >
    hello
  </span>
</div>
`;
